# ot2-vision

./: .gitignore  CLAUDE.md  HELP.md  Makefile  insta360-link-2c-linux-setup.md  instruction.md  pipeline.md  pyproject.toml  session_summary_20260311.md  summary.md
ot2_vision/: __init__.py  cli.py  config.py  pipeline.py  vision_pipeline.py
ot2_vision/camera/: __init__.py  frame_data.py  realsense.py  webcam.py
ot2_vision/detection/: __init__.py  annotator.py  detector.py  labware_classes.py
ot2_vision/executor/: __init__.py  ot2_client.py  primitives.py  protocol_runner.py  run_protocol.py
ot2_vision/grounding/: __init__.py  calibration.py  deck_mapper.py  ot2_deck.py  spatial_resolver.py
ot2_vision/protocol/: __init__.py  generator.py  prompt_templates.py  scene_description.py  validator.py
ot2_vision/vision/: __init__.py  scene_analyzer.py
primitives/: README.md  aspirate_to_trash.py  wave_goodbye_transfer.py
procedures/: README.md  deck_state.md  lid_detection.md  pipette_mount.md  preflight.md  tip_map.md
scripts/: add-lab-user.sh  calibrate.py  test_camera.py  test_detection.py  test_pipeline.py
tests/: test_ot2_deck.py  test_protocol_validator.py  test_scene_analyzer.py  test_scene_description.py  test_spatial_resolver.py  test_webcam.py
