[project]
name = "ot2-vision"
version = "0.1.0"
description = "Vision-Language-to-Protocol system for Opentrons OT-2"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.58.0",
    "opencv-contrib-python-headless>=4.10.0",
    "ultralytics>=8.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ot2-vision = "ot2_vision.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ot2_vision*"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]
